Use WorkInfo in more places